--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div>
+  <div id="lonely-div" class="animated zoomOut">
+    <p>Some fun text</p>
+  </div>
+  <div id="another-div">
+    <p>Some more fun text</p>
   </div>
 </body>
 </html>
