--- a/secondpage.html
+++ b/secondpage.html
@@ -7,16 +7,10 @@
   <script type="text/javascript" src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-  <div id="lonely-div" class="animated flash infinite">
-    <nav>
-      <a href="secondpage.html"><button>Click here to go to second page</button></a>
-    </nav>
-    <p>Fun text :D</p>
+<body id = "secondBody">
+  <div id = "parallex">
+    <p>Hi there!</p>
   </div>
-  <br>
-  <div id = "another-div">
-    <p>HI!</p>
-  </div>
+
+<button id = "button">Click here for cool event</button>
 </body>
-</html>
