I started the thing and tried to do some extras with letter keys but got side tracked.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div id="lonely-div" class="animated zoomOut">
+  <div id="lonely-div" class="animated jello infinite">
+    <p>Some fun text.</p>
+  </div>
+  <div id="anotherDiv">
+    <p>Some more fun text.</p>
+    <textarea></textarea>
   </div>
 </body>
 </html>
