--- a/pagel.html
+++ b/pagel.html
@@ -7,18 +7,14 @@
   <script type="text/javascript" src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body  >
   <nav id="nav">
     <ul>
       <li id="company-name">BOB</li>
-      <li class="page-link"><a href="pagel.html"> Page 2</a></li>
+      <li class="page-link"><a href="index.html"> Page 1</a></li>
     </ul>
   </nav>
-  <div id="lonely-div" class = "animated infinite shake">
-    <p>Hi</p>
-  </div>
-  <div id="dv" >
-    <p>3s</p>
+  <div id = "body" >
+    
   </div>
 </body>
-</html>
